--- a/templates/projectadmin/project-edit.html
+++ b/templates/projectadmin/project-edit.html
@@ -55,7 +55,7 @@
                 <div class="card-body">
                     <div class="form-group">
                         <label for="project-status">Status</label>
-                        <select class="form-select bg-{% if PROJECT.status == "not_started" or PROJECT.status == "blocked" or PROJECT.status == "cancelled" %}blocked{% elif PROJECT.status == "in_progress" or PROJECT.status == "on_hold" %}warning{% else %}success{% endif %}" name="project-status" id="project-status">
+                        <select class="form-select" name="project-status" id="project-status">
                             {% for value, display in STATUSES.choices %}
                                 <option value="{{ value }}">{{ display }}</option>
                             {% endfor %}
