--- a/templates/projectadmin/project-edit.html
+++ b/templates/projectadmin/project-edit.html
@@ -37,12 +37,12 @@
                 </div>
                 <div class="card-body">
                     <div class="form-group">
-                        <label for="project-name">Project Name</label>
-                        <input class="form-control" name="project-name" id="project-name" value="{{ PROJECT.name }}"/>
+                        <label for="name">Project Name <small class="text-danger">required</small></label>
+                        <input class="form-control" name="name" id="name" value="{{ PROJECT.name }}"/>
                     </div>
                     <div class="form-group">
-                        <label for="project-description">Project Description</label>
-                        <textarea class="form-control" name="project-description" id="project-description" rows="20">{{ PROJECT.description }}</textarea>
+                        <label for="description">Project Description</label>
+                        <textarea class="form-control" name="description" id="description" rows="20">{{ PROJECT.description }}</textarea>
                     </div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="card-body">
                     <div class="form-group">
-                        <label for="project-status">Status</label>
+                        <label for="project-status">Status <small class="text-danger">required</small></label>
                         <select class="form-select" name="project-status" id="project-status">
                             {% for value, display in STATUSES.choices %}
                                 <option value="{{ value }}" {% if PROJECT.status == value %}selected="selected"{% endif %}>{{ display }}</option>
@@ -62,8 +62,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="project-start-date">Project Started</label>
-                        <input class="form-control" name="project-start-date" id="project-start-date" value="{{ PROJECT.start_date }}"/>
+                        <label for="start_date">Project Started <small class="text-danger">required</small></label>
+                        <input class="form-control" name="start_date" id="start_date" value="{{ PROJECT.start_date }}"/>
                     </div>
                     <div class="form-group">
                         {% now "Y-m-d" as current_date %}
