--- a/templates/projectadmin/project-edit.html
+++ b/templates/projectadmin/project-edit.html
@@ -15,7 +15,7 @@
         </div>
         {% if success %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>{{ object }} Deleted!</strong><br> The client was successfully deleted.
+                <strong>{{ object }} Project Updated!</strong><br> The project was updated successfully.
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
