Fix Modal Button

--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -199,7 +199,7 @@
                     </div>
                     <hr>
                     <div class="form-group">
-                        <a class="btn btn-outline-danger float-right" href="#" data-toggle="modal" data-target="#logoutModal">Logout</a>                        <h5>Delete Project</h5>
+                        <a class="btn btn-outline-danger float-right" href="#" data-toggle="modal" data-target="#deleteModal">Delete</a>                        <h5>Delete Project</h5>
                         <small>This process is irreversible. Once deleted, it's gone forever.</small>
                     </div>
                 </div>
