--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -176,7 +176,7 @@
                         {% if PROJECT.issues.count == 0 %}
                             <tr>
                                 <td></td>
-                                <td>No issues for this project have been raised.</td>
+                                <td>No issues for this project have been raised yet.</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
