--- a/templates/projectadmin/project-detail.html
+++ b/templates/projectadmin/project-detail.html
@@ -149,7 +149,7 @@
                                     <td><span class="badge badge-secondary">{{ task.start_date }}-{% if task.end_date %}{{ task.end_date }}{% else %}{% if task.status == "completed" %}{{ task.start_date }}{% else %}Unknown{% endif %}{% endif %}</span></td>
                                     <td><span class="badge badge-{% if task.status == "not_started" or task.status == "blocked" or task.status == "cancelled" %}danger{% elif task.status == "in_progress" or task.status == "on_hold" %}warning{% else %}success{% endif %}">{% if task.completed_requirements == task.total_requirements %}{{ task.get_status_display }}{% else %}Unmet Requirements{% endif %}</span></td>
                                     <td class="text-center"><span class="badge badge-{% if task.total_requirements == 0 %}secondary{% elif task.completed_requirements == task.total_requirements %}success{% else %}danger{% endif %}">{{ task.completed_requirements }}/{{ task.total_requirements }}</span></td>
-                                    <td><a href="#" class="btn btn-info btn-sm"><i class="fas fa-wrench fa-sm"></i></a></td>
+                                    <td><a href="{% url 'admin-task-detail' id=task.id %}" class="btn btn-info btn-sm"><i class="fas fa-wrench fa-sm"></i></a></td>
                                 </tr>
                             {% endfor %}
                         {% endif %}
