--- a/templates/projectadmin/task-detail.html
+++ b/templates/projectadmin/task-detail.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     <div class="row d-sm-flex align-items-center justify-content-between">
         <div class="col-md-12">
-            <h1 class="h3 mb-0 text-dark"><i class="fas fa-diagram-project"></i> {{ PAGE_TITLE }}<a href="{% url 'admin-project-edit' id=PROJECT.id %}" class="btn btn-info float-right">Edit Project</a></h1>
+            <h1 class="h3 mb-0 text-dark"><i class="fas fa-diagram-project"></i> {{ PAGE_TITLE }}<a href="{% url 'admin-project-detail' id=TASK.project.id %}" class="btn btn-info float-right">Back to Project</a></h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="{% url 'admin-dashboard-home' %}">Admin Dashboard</a></li>
