--- a/templates/projectadmin/task-detail.html
+++ b/templates/projectadmin/task-detail.html
@@ -39,11 +39,11 @@
                 <div class="card-body">
                     <div class="form-group">
                         <label for="project-name">Task Name</label>
-                        <input class="form-control" name="name" id="name" value="{{ TASK.project.name }}"/>
+                        <input class="form-control" name="name" id="name" value="{{ TASK.name }}"/>
                     </div>
                     <div class="form-group">
                         <label for="description">Task Description</label>
-                        <textarea class="form-control" name="description" id="description" rows="20">{{ TASK.project.description }}</textarea>
+                        <textarea class="form-control" name="description" id="description" rows="20">{{ TASK.description }}</textarea>
                     </div>
                 </div>
             </div>
