--- a/templates/projectadmin/task-detail.html
+++ b/templates/projectadmin/task-detail.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="form-group">
                         <label for="start_date">Task Started</label>
-                        <input class="form-control" name="start_date" id="start_date" value="{{ TASK.start_date }}" disabled="disabled" />
+                        <input class="form-control" name="start_date" id="start_date" value="{{ TASK.start_date|date:"Y-m-d" }}" disabled="disabled" />
                     </div>
                     <div class="form-group">
                         {% now "Y-m-d" as current_date %}
