--- a/templates/projectadmin/task-detail.html
+++ b/templates/projectadmin/task-detail.html
@@ -58,7 +58,7 @@
                         {% if TASK.status == "not_started" %}
                             <button type="submit" name="mark-started" class="btn btn-outline-success btn-block">Start Task</button>
                         {% else %}
-                            <button type="submit" name="mark-started" class="btn btn-outline-success btn-block">Reopen Task</button>
+                            <button type="submit" name="mark-started" class="btn btn-outline-warning btn-block">Reopen Task</button>
                         {% endif %}
                         {% if task.status != "completed" %}
                             <button type="submit" name="mark-complete" class="btn btn-outline-success btn-block">Complete Task</button>
