--- a/templates/projectadmin/task-detail.html
+++ b/templates/projectadmin/task-detail.html
@@ -60,7 +60,7 @@
                         {% else %}
                             <button type="submit" name="mark-started" class="btn btn-outline-warning btn-block">Reopen Task</button>
                         {% endif %}
-                        {% if task.status != "completed" %}
+                        {% if TASK.status != "completed" %}
                             <button type="submit" name="mark-complete" class="btn btn-outline-success btn-block">Complete Task</button>
                         {% endif %}
                         <button type="submit" name="mark-blocked" class="btn btn-outline-danger btn-block">Block Task</button>
