--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -2,8 +2,8 @@
 {% block page_content %}
 <form action="" method="post">
     {% csrf_token %}
-    <div class="row d-sm-flex align-items-center justify-content-between">
-        <div class="col-md-12">
+    <div class="row d-sm-flex align-items-center justify-content-between mb-4">
+        <div class="col-md-5">
             <h1 class="h3 mb-0 text-dark"><i class="fas fa-diagram-project"></i> {{ PAGE_TITLE }}</h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
@@ -13,9 +13,22 @@
                 </ol>
             </nav>
         </div>
+        <div class="col-md-7">
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="dashboard-tab" data-toggle="tab" href="#dashboard" role="tab" aria-controls="dashboard" aria-selected="true">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="tasks-tab" data-toggle="tab" href="#tasks" role="tab" aria-controls="tasks" aria-selected="false">Tasks</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="issues-tab" data-toggle="tab" href="#issues" role="tab" aria-controls="issues" aria-selected="false">Issues</a>
+              </li>
+            </ul>
+        </div>
         {% if success %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>{{ object }} Deleted!</strong><br> The client was successfully deleted.
+                <strong>Gem Updated!</strong><br> The gem has been successfully updated.
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -29,8 +42,17 @@
             </div>
         {% endif %}
     </div>
-    <div class="row">
+    <div class="tab-content" id="nav-tabContent">
+        <div class="tab-pane fade show active mb-3" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
+            <div class="card text-dark mb-3">
+                <div class="card-header">
+                    <h5 class="card-title text-white float-left">Project Insights</h5>
+                </div>
+                <div class="card-body">
 
+                </div>
+            </div>
+        </div>
     </div>
 </form>
 {% endblock %}
