--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -49,7 +49,14 @@
                     <h5 class="card-title text-white float-left">Project Insights</h5>
                 </div>
                 <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-8">
 
+                        </div>
+                        <div class="col-md-4">
+                            <h2>{{ PROJECT.total_tasks_completed }}/{{ PROJECT.total_tasks }}</h2>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
