--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -54,7 +54,8 @@
 
                         </div>
                         <div class="col-md-4">
-                            <h2>{{ PROJECT.total_tasks_completed }}/{{ PROJECT.total_tasks }}</h2>
+                            <h2>{{ PROJECT.total_tasks_completed }}/{{ PROJECT.total_tasks }} Tasks Completed</h2>
+                            <h2>{{ PROJECT.total_issues_completed }}/{{ PROJECT.total_issues }} Issues Resolved</h2>
                         </div>
                     </div>
                 </div>
