--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="col-md-4">
                             <h2><span class="badge badge-info">{{ PROJECT.total_tasks_completed }}/{{ PROJECT.total_tasks }} Tasks Completed</span></h2>
-                            <h2><span class="badge badge-info">{{ PROJECT.total_issues_resolved }}/{{ PROJECT.total_issues }} Issues Resolved</span></h2>
+                            <h2><span class="badge badge-{% if PROJECT.total_issues_resolved == PROJECT.total_issues %}success{% else %}warning{% endif %}">{{ PROJECT.total_issues_resolved }} Issues Resolved</span></h2>
                         </div>
                     </div>
                 </div>
