--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -54,8 +54,8 @@
 
                         </div>
                         <div class="col-md-4">
-                            <h2><span class="badge badge-info">{{ PROJECT.total_tasks_completed }}/{{ PROJECT.total_tasks }} Tasks Completed</span></h2>
-                            <h2><span class="badge badge-{% if PROJECT.total_issues_resolved == PROJECT.total_issues %}success{% else %}warning{% endif %}">{{ PROJECT.total_issues_resolved }} Issues Resolved</span></h2>
+                            <h2><span class="badge badge-{% if PROJECT.total_tasks == 0 %}warning{% elif PROJECT.total_tasks_completed == PROJECT.total_tasks %}success{% else %}warning{% endif %}">{{ PROJECT.total_tasks_completed }}/{{ PROJECT.total_tasks }} Tasks {% if PROJECT.total_tasks == 0 %}Created{% else %}Completed{% endif %}</span></h2>
+                            <h2><span class="badge badge-{% if PROJECT.total_issues_resolved == PROJECT.total_issues %}success{% else %}danger{% endif %}">{{ PROJECT.total_issues_resolved }} Issues {% if PROJECT.total_issues == 0 %}Reported{% else %}Resolved{% endif %}</span></h2>
                         </div>
                     </div>
                 </div>
