--- a/templates/projectpulse/project-detail.html
+++ b/templates/projectpulse/project-detail.html
@@ -48,7 +48,7 @@
                 <div class="col-md-8">
                     <div class="card text-dark mb-3">
                         <div class="card-header">
-                            <h5 class="card-title text-white float-left">Project Insights</h5>
+                            <h5 class="card-title text-white float-left">Project Insights<span class="badge badge-{% if PROJECT.status == "completed" %}success{% elif PROJECT.status == "in_progress" or PROJECT.status == "on_hold" %}warning{% else %}danger{% endif %}">{{ PROJECT.get_status_display }}</span></h5>
                         </div>
                         <div class="card-body">
                         </div>
@@ -76,7 +76,7 @@
                                 <div class="row no-gutters align-items-center">
                                     <div class="col mr-2">
                                         <div class="text-xs font-weight-bold text-{% if PROJECT.total_issues_resolved == PROJECT.total_issues %}success{% else %}danger{% endif %} text-uppercase mb-1">Issues {% if PROJECT.total_issues == 0 %}Reported{% else %}Resolved{% endif %}</div>
-                                        <div class="h2 mb-0 font-weight-bold">{{ PROJECT.total_issues_resolved }}</div>
+                                        <div class="h2 mb-0 font-weight-bold">{{ PROJECT.total_issues_resolved }}/{{ PROJECT.total_issues }}</div>
                                     </div>
                                     <div class="col-auto">
                                         <i class="fas fa-circle-exclamation fa-2x"></i>
